--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 }
 
 :root {
-    --red-background: #bf2626;
-    --yellow-background-calc: #f2b138;
+    --red-background: #9c8888;
+    --yellow-background-calc: #130c2d;
     --green-dark-two: #5c8374;
     --green-dark-three: #93b1a6;
 }
@@ -21,6 +21,12 @@ body {
     align-items: center;
     min-height: 100vh;
 }
+
+#container-topo {
+    width: 100%;
+    height: auto;
+}
+
 
 #calculator-title {
     display: flex;
@@ -71,7 +77,7 @@ label {
     margin-bottom: 0.5rem;
     font-weight: bold;
     font-size: 1.1rem;
-    color: black;
+    color: rgb(170, 165, 165);
 }
 
 input {
@@ -115,7 +121,7 @@ input {
 }
 
 #button-calculator:hover {
-    background-color: rgb(24, 22, 22);
+    background-color: rgb(111, 77, 223);
     color: white;
 }
 
