mudança na cor do background

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-    --red-background: #9c8888;
+    --red-background: #210554;
     --yellow-background-calc: #130c2d;
     --green-dark-two: #5c8374;
     --green-dark-three: #93b1a6;
